fix incorrect uncomment

--- a/evaluation_configs/config_baseline_hp_tuning_4_labels_new-reader-split.json
+++ b/evaluation_configs/config_baseline_hp_tuning_4_labels_new-reader-split.json
@@ -5,5 +5,5 @@
   "grid_search_verbosity": 1,
   "data_folder": "/Users/debor/repos/PoTeC-data",
   "random_state": 21,
-  "label_col": "reader_domain_numeric"
+  "label": "reader_domain_numeric"
 }
