--- a/evaluation_configs/config_baseline_hp_tuning_2_labels_new-reader-split_label-2_bq_correct.json
+++ b/evaluation_configs/config_baseline_hp_tuning_2_labels_new-reader-split_label-2_bq_correct.json
@@ -5,5 +5,5 @@
   "grid_search_verbosity": 1,
   "potec_folder": "/Users/debor/repos/PoTeC-data",
   "random_state": 21,
-  "label": "expert_cls_label"
+  "label": "2_bq_correct"
 }
