--- a/feature_analysis/potec_feature_names.yaml
+++ b/feature_analysis/potec_feature_names.yaml
@@ -1,9 +1,9 @@
 {'FFD_mean': '', 
                 'FFD_std': '', 
                 'FFD_skew': '', 
-                'FFD_kurtosis': '', 
+                'FFD_kurtosis': 'First-fixation duration (kurtosis)', 
                 'FPRT_mean': '', 
-                'FPRT_std': '', 
+                'FPRT_std': 'First-pass reading time (std)', 
                 'FPRT_skew': '', 
                 'FPRT_kurtosis': '', 
                 'FRT_mean': '', 
@@ -23,7 +23,7 @@
                 'RPD_exc_skew': '', 
                 'RPD_exc_kurtosis': '', 
                 'Fix_mean': '', 
-                'Fix_std': '', 
+                'Fix_std': 'Number of fixated words (std)', 
                 'Fix_skew': '', 
                 'Fix_kurtosis': '', 
                 'FPReg_mean': '', 
@@ -51,7 +51,7 @@
                 'is_abbreviation_TFT_mean': '', 
                 'is_abbreviation_TFT_std': '', 
                 'is_abbreviation_RRT_mean': '', 
-                'is_abbreviation_RRT_std': '', 
+                'is_abbreviation_RRT_std': 'Re-reading time of abbreviations (std)', 
                 'is_abbreviation_RPD_exc_mean': '', 
                 'is_abbreviation_RPD_exc_std': '', 
                 'is_abbreviation_Fix_mean': '', 
@@ -64,7 +64,7 @@
                 'is_abbreviation_SL_out_std': '', 
                 'is_abbreviation_TRC_out_mean': '', 
                 'is_abbreviation_TRC_out_std': '', 
-                'is_clause_beginning_FFD_mean': '', 
+                'is_clause_beginning_FFD_mean': 'First-fixation duration of clause beginnings (mean)', 
                 'is_clause_beginning_FFD_std': '', 
                 'is_clause_beginning_FPRT_mean': '', 
                 'is_clause_beginning_FPRT_std': '', 
@@ -79,14 +79,14 @@
                 'is_clause_beginning_Fix_mean': 'Ratio of fixated clause beginnings',
                 'is_clause_beginning_Fix_std': '',
                 'is_clause_beginning_FPReg_mean': '', 
-                'is_clause_beginning_FPReg_std': '', 
+                'is_clause_beginning_FPReg_std': 'Number of first-pass regressions triggered by clause beginnings (std)', 
                 'is_clause_beginning_RR_mean': 'Ratio of re-read clause beginnings',
                 'is_clause_beginning_RR_std': '', 
                 'is_clause_beginning_SL_out_mean': '', 
                 'is_clause_beginning_SL_out_std': '', 
                 'is_clause_beginning_TRC_out_mean': '', 
                 'is_clause_beginning_TRC_out_std': '',
-                'is_in_parentheses_FFD_mean': '', 
+                'is_in_parentheses_FFD_mean': 'First-fixation duration of words in parentheses (mean)', 
                 'is_in_parentheses_FFD_std': '', 
                 'is_in_parentheses_FPRT_mean': '', 
                 'is_in_parentheses_FPRT_std': '', 
@@ -108,8 +108,8 @@
                 'is_in_parentheses_SL_out_std': '', 
                 'is_in_parentheses_TRC_out_mean': '', 
                 'is_in_parentheses_TRC_out_std': '# TRC_out from words in parentheses (std)',
-                'is_in_quote_FFD_mean': '', 
-                'is_in_quote_FFD_std': 'FFD of words in quote (std)',
+                'is_in_quote_FFD_mean': 'First-fixation duration of words in quote (mean)', 
+                'is_in_quote_FFD_std': 'First-fixation duration of words in quote (std)',
                 'is_in_quote_FPRT_mean': '', 
                 'is_in_quote_FPRT_std': '',
                 'is_in_quote_FRT_mean': '', 
@@ -117,7 +117,7 @@
                 'is_in_quote_TFT_mean': '', 
                 'is_in_quote_TFT_std': '', 
                 'is_in_quote_RRT_mean': '', 
-                'is_in_quote_RRT_std': '', 
+                'is_in_quote_RRT_std': 'Re-reading time of words in quote (std)', 
                 'is_in_quote_RPD_exc_mean': '', 
                 'is_in_quote_RPD_exc_std': '', 
                 'is_in_quote_Fix_mean': '', 
@@ -132,12 +132,12 @@
                 'is_in_quote_TRC_out_std': '# TRC_out from words in quote (std)',
                 'is_sent_beginning_FFD_mean': '', 
                 'is_sent_beginning_FFD_std': '', 
-                'is_sent_beginning_FPRT_mean': '', 
-                'is_sent_beginning_FPRT_std': '', 
+                'is_sent_beginning_FPRT_mean': 'First-pass reading time of sentence beginnings (mean)', 
+                'is_sent_beginning_FPRT_std': 'First-pass reading time of sentence beginnings (std)', 
                 'is_sent_beginning_FRT_mean': '', 
                 'is_sent_beginning_FRT_std': '', 
                 'is_sent_beginning_TFT_mean': '', 
-                'is_sent_beginning_TFT_std': '',
+                'is_sent_beginning_TFT_std': 'Total fixation time of sentence beginnings (std)',
                 'is_sent_beginning_RRT_mean': '', 
                 'is_sent_beginning_RRT_std': '', 
                 'is_sent_beginning_RPD_exc_mean': '', 
@@ -161,13 +161,13 @@
                 'is_expert_technical_term_TFT_mean': '', 
                 'is_expert_technical_term_TFT_std': '',
                 'is_expert_technical_term_RRT_mean': '', 
-                'is_expert_technical_term_RRT_std': '', 
+                'is_expert_technical_term_RRT_std': 'Re-reading time of technical terms only understood by experts (std)', 
                 'is_expert_technical_term_RPD_exc_mean': '', 
                 'is_expert_technical_term_RPD_exc_std': '', 
                 'is_expert_technical_term_Fix_mean': '', 
                 'is_expert_technical_term_Fix_std': '', 
                 'is_expert_technical_term_FPReg_mean': '', 
-                'is_expert_technical_term_FPReg_std': '', 
+                'is_expert_technical_term_FPReg_std': 'Technical terms only understood by experts triggering a first-pass regression (std)', 
                 'is_expert_technical_term_RR_mean': 'Ratio of re-read expert technical terms',
                 'is_expert_technical_term_RR_std': '', 
                 'is_expert_technical_term_SL_out_mean': '', 
@@ -191,7 +191,7 @@
                 'is_general_technical_term_FPReg_mean': 'Ratio of general technical terms triggering a FPReg',
                 'is_general_technical_term_FPReg_std': 'FPReg initiated from general technical terms (std)',
                 'is_general_technical_term_RR_mean': '', 
-                'is_general_technical_term_RR_std': '',
+                'is_general_technical_term_RR_std': 'Number of re-read generally understandable technical terms (std)',
                 'is_general_technical_term_SL_out_mean': '', 
                 'is_general_technical_term_SL_out_std': '', 
                 'is_general_technical_term_TRC_out_mean': '', 
@@ -242,7 +242,7 @@
                 'contains_hyphen_TRC_out_std': '', 
                 'contains_symbol_FFD_mean': '', 
                 'contains_symbol_FFD_std': '', 
-                'contains_symbol_FPRT_mean': '',
+                'contains_symbol_FPRT_mean': 'First-pass reading time of words that contain a symbol or non-Latin character (mean)',
                 'contains_symbol_FPRT_std': '', 
                 'contains_symbol_FRT_mean': '',
                 'contains_symbol_FRT_std': '', 
@@ -315,7 +315,7 @@
                 'FRT_word_length_high_mean': '', 
                 'FRT_word_length_low_std': '',
                 'FRT_word_length_medium_std': '', 
-                'FRT_word_length_high_std': '', 
+                'FRT_word_length_high_std': 'First-reading time of long words (std)', 
                 'FRT_familiarity_normalized_low_mean': '', 
                 'FRT_familiarity_normalized_medium_mean': '',
                 'FRT_familiarity_normalized_high_mean': '', 
@@ -327,7 +327,7 @@
                 'FRT_regularity_normalized_high_mean': '',
                 'FRT_regularity_normalized_low_std': '',
                 'FRT_regularity_normalized_medium_std': '',
-                'FRT_regularity_normalized_high_std': '', 
+                'FRT_regularity_normalized_high_std': 'First-reading time of highly regular words (std)', 
                 'FRT_lemma_frequency_normalized_low_mean': '', 
                 'FRT_lemma_frequency_normalized_medium_mean': '', 
                 'FRT_lemma_frequency_normalized_high_mean': '', 
@@ -416,18 +416,18 @@
                 'Fix_familiarity_normalized_medium_mean': '',
                 'Fix_familiarity_normalized_high_mean': '', 
                 'Fix_familiarity_normalized_low_std': '', 
-                'Fix_familiarity_normalized_medium_std': '', 
+                'Fix_familiarity_normalized_medium_std': 'Number of fixated medium familiar words (std)', 
                 'Fix_familiarity_normalized_high_std': '',
                 'Fix_regularity_normalized_low_mean': '', 
                 'Fix_regularity_normalized_medium_mean': '', 
                 'Fix_regularity_normalized_high_mean': '', 
                 'Fix_regularity_normalized_low_std': '', 
-                'Fix_regularity_normalized_medium_std': '', 
+                'Fix_regularity_normalized_medium_std': 'Number of fixated medium regular words (std)', 
                 'Fix_regularity_normalized_high_std': '', 
                 'Fix_lemma_frequency_normalized_low_mean': '',
                 'Fix_lemma_frequency_normalized_medium_mean': '', 
                 'Fix_lemma_frequency_normalized_high_mean': '', 
-                'Fix_lemma_frequency_normalized_low_std': '', 
+                'Fix_lemma_frequency_normalized_low_std': 'Number of fixated words with low lemma frequency (std)', 
                 'Fix_lemma_frequency_normalized_medium_std': '', 
                 'Fix_lemma_frequency_normalized_high_std': '',
                 'FPReg_word_length_low_mean': '', 
@@ -442,9 +442,9 @@
                 'FPReg_familiarity_normalized_low_std': '',
                 'FPReg_familiarity_normalized_medium_std': '', 
                 'FPReg_familiarity_normalized_high_std': '',
-                'FPReg_regularity_normalized_low_mean': 'Ratio of low regularity words triggering a FPReg',
-                'FPReg_regularity_normalized_medium_mean': 'Ratio of medium regularity words triggering a FPReg',
-                'FPReg_regularity_normalized_high_mean': 'Ratio of high regularity words triggering a FPReg',
+                'FPReg_regularity_normalized_low_mean': 'Number of little regular words triggering a first-pass regression (mean)',
+                'FPReg_regularity_normalized_medium_mean': 'Number of medium regularity words triggering a first-pass regression (mean)',
+                'FPReg_regularity_normalized_high_mean': 'Number of highly regular words triggering a first-pass regression (mean)',
                 'FPReg_regularity_normalized_low_std': '', 
                 'FPReg_regularity_normalized_medium_std': '', 
                 'FPReg_regularity_normalized_high_std': '', 
@@ -487,20 +487,20 @@
                 'SL_out_familiarity_normalized_low_mean': '', 
                 'SL_out_familiarity_normalized_medium_mean': '', 
                 'SL_out_familiarity_normalized_high_mean': '', 
-                'SL_out_familiarity_normalized_low_std': '', 
+                'SL_out_familiarity_normalized_low_std': 'Outgoing saccade length of words that are little familiar (std)', 
                 'SL_out_familiarity_normalized_medium_std': '', 
-                'SL_out_familiarity_normalized_high_std': '',
+                'SL_out_familiarity_normalized_high_std': 'Outgoing saccade length of words that are highly familiar (std)',
                 'SL_out_regularity_normalized_low_mean': '', 
                 'SL_out_regularity_normalized_medium_mean': '', 
                 'SL_out_regularity_normalized_high_mean': '', 
                 'SL_out_regularity_normalized_low_std': '',
                 'SL_out_regularity_normalized_medium_std': '', 
-                'SL_out_regularity_normalized_high_std': '', 
+                'SL_out_regularity_normalized_high_std': 'Outgoing saccade length from highly regular words (std)', 
                 'SL_out_lemma_frequency_normalized_low_mean': '', 
                 'SL_out_lemma_frequency_normalized_medium_mean': '', 
                 'SL_out_lemma_frequency_normalized_high_mean': '', 
                 'SL_out_lemma_frequency_normalized_low_std': '', 
-                'SL_out_lemma_frequency_normalized_medium_std': '', 
+                'SL_out_lemma_frequency_normalized_medium_std': 'Outgoing saccade length from words with medium lemma frequency (std)', 
                 'SL_out_lemma_frequency_normalized_high_std': '', 
                 'TRC_out_word_length_low_mean': '', 
                 'TRC_out_word_length_medium_mean': '', 
