--- a/feature_analysis/potec_feature_names.yaml
+++ b/feature_analysis/potec_feature_names.yaml
@@ -1,5 +1,5 @@
 {'FFD_mean': '', 
-                'FFD_std': '', 
+                'FFD_std': 'First fixation duration (std)',
                 'FFD_skew': '', 
                 'FFD_kurtosis': 'First-fixation duration (kurtosis)', 
                 'FPRT_mean': '', 
@@ -21,17 +21,17 @@
                 'RPD_exc_mean': '', 
                 'RPD_exc_std': '', 
                 'RPD_exc_skew': '', 
-                'RPD_exc_kurtosis': '', 
-                'Fix_mean': '', 
+                'RPD_exc_kurtosis': 'Regression path duration (kurtosis)',
+                'Fix_mean': 'Number of fixated words (mean)',
                 'Fix_std': 'Number of fixated words (std)', 
                 'Fix_skew': '', 
                 'Fix_kurtosis': '', 
                 'FPReg_mean': '', 
                 'FPReg_std': '', 
-                'FPReg_skew': '', 
-                'FPReg_kurtosis': '', 
+                'FPReg_skew': 'First-pass regressions (skewness)',
+                'FPReg_kurtosis': 'First-pass regressions (kurtosis)',
                 'RR_mean': '', 
-                'RR_std': '', 
+                'RR_std': 'Number of re-read words (std)',
                 'RR_skew': '', 
                 'RR_kurtosis': '', 
                 'SL_out_mean': '', 
@@ -40,12 +40,12 @@
                 'SL_out_kurtosis': '', 
                 'TRC_out_mean': '', 
                 'TRC_out_std': '', 
-                'TRC_out_skew': '', 
+                'TRC_out_skew': 'Total regression count (skewness)',
                 'TRC_out_kurtosis': '', 
-                'is_abbreviation_FFD_mean': '', 
+                'is_abbreviation_FFD_mean': 'First fixation duration of abbreviations (mean)',
                 'is_abbreviation_FFD_std': '', 
                 'is_abbreviation_FPRT_mean': '', 
-                'is_abbreviation_FPRT_std': '', 
+                'is_abbreviation_FPRT_std': 'First-pass reading time on abbreviations (std)',
                 'is_abbreviation_FRT_mean': '', 
                 'is_abbreviation_FRT_std': '', 
                 'is_abbreviation_TFT_mean': '', 
@@ -60,7 +60,7 @@
                 'is_abbreviation_FPReg_std': '', 
                 'is_abbreviation_RR_mean': '', 
                 'is_abbreviation_RR_std': '', 
-                'is_abbreviation_SL_out_mean': '', 
+                'is_abbreviation_SL_out_mean': 'Outgoing saccade length from abbreviations (mean)',
                 'is_abbreviation_SL_out_std': '', 
                 'is_abbreviation_TRC_out_mean': '', 
                 'is_abbreviation_TRC_out_std': '', 
@@ -164,7 +164,7 @@
                 'is_expert_technical_term_RRT_std': 'Re-reading time of technical terms only understood by experts (std)', 
                 'is_expert_technical_term_RPD_exc_mean': '', 
                 'is_expert_technical_term_RPD_exc_std': '', 
-                'is_expert_technical_term_Fix_mean': '', 
+                'is_expert_technical_term_Fix_mean': 'Number of fixations on technical terms only understood by experts (mean)',
                 'is_expert_technical_term_Fix_std': '', 
                 'is_expert_technical_term_FPReg_mean': '', 
                 'is_expert_technical_term_FPReg_std': 'Technical terms only understood by experts triggering a first-pass regression (std)', 
@@ -236,7 +236,7 @@
                 'contains_hyphen_FPReg_std': '', 
                 'contains_hyphen_RR_mean': 'Ratio of re-read words containing a hyphen',
                 'contains_hyphen_RR_std': '', 
-                'contains_hyphen_SL_out_mean': '', 
+                'contains_hyphen_SL_out_mean': 'Outgoing saccade length from words containing hyphens (mean)',
                 'contains_hyphen_SL_out_std': '',
                 'contains_hyphen_TRC_out_mean': '', 
                 'contains_hyphen_TRC_out_std': '', 
@@ -262,25 +262,25 @@
                 'contains_symbol_SL_out_std': '', 
                 'contains_symbol_TRC_out_mean': '', 
                 'contains_symbol_TRC_out_std': '# TRC_out from words containing a symbol (std)',
-                'FFD_word_length_low_mean': '', 
+                'FFD_word_length_low_mean': 'First fixation duration of short words (mean)',
                 'FFD_word_length_medium_mean': '',
                 'FFD_word_length_high_mean': '', 
                 'FFD_word_length_low_std': '', 
                 'FFD_word_length_medium_std': '', 
-                'FFD_word_length_high_std': '', 
+                'FFD_word_length_high_std': 'First fixation duration on long words (std)',
                 'FFD_familiarity_normalized_low_mean': '', 
                 'FFD_familiarity_normalized_medium_mean': '', 
-                'FFD_familiarity_normalized_high_mean': '', 
-                'FFD_familiarity_normalized_low_std': '', 
+                'FFD_familiarity_normalized_high_mean': 'First fixation duration of highly familiar words (mean)',
+                'FFD_familiarity_normalized_low_std': 'First fixation duration of little familiar words (std)',
                 'FFD_familiarity_normalized_medium_std': '', 
                 'FFD_familiarity_normalized_high_std': '',
-                'FFD_regularity_normalized_low_mean': '', 
+                'FFD_regularity_normalized_low_mean': 'First fixation duration of irregular words (mean)',
                 'FFD_regularity_normalized_medium_mean': '', 
                 'FFD_regularity_normalized_high_mean': '', 
                 'FFD_regularity_normalized_low_std': '', 
                 'FFD_regularity_normalized_medium_std': '', 
                 'FFD_regularity_normalized_high_std': '', 
-                'FFD_lemma_frequency_normalized_low_mean': '', 
+                'FFD_lemma_frequency_normalized_low_mean': 'First fixation duration on low frequency words (mean)',
                 'FFD_lemma_frequency_normalized_medium_mean': '', 
                 'FFD_lemma_frequency_normalized_high_mean': '', 
                 'FFD_lemma_frequency_normalized_low_std': '', 
@@ -318,7 +318,7 @@
                 'FRT_word_length_high_std': 'First-reading time of long words (std)', 
                 'FRT_familiarity_normalized_low_mean': '', 
                 'FRT_familiarity_normalized_medium_mean': '',
-                'FRT_familiarity_normalized_high_mean': '', 
+                'FRT_familiarity_normalized_high_mean': 'First-reading time of highly familiar words (mean)',
                 'FRT_familiarity_normalized_low_std': '', 
                 'FRT_familiarity_normalized_medium_std': '', 
                 'FRT_familiarity_normalized_high_std': '', 
@@ -337,7 +337,7 @@
                 'TFT_word_length_low_mean': '', 
                 'TFT_word_length_medium_mean': '',
                 'TFT_word_length_high_mean': '', 
-                'TFT_word_length_low_std': '', 
+                'TFT_word_length_low_std': '',
                 'TFT_word_length_medium_std': '', 
                 'TFT_word_length_high_std': '', 
                 'TFT_familiarity_normalized_low_mean': '', 
@@ -347,7 +347,7 @@
                 'TFT_familiarity_normalized_medium_std': '',
                 'TFT_familiarity_normalized_high_std': '', 
                 'TFT_regularity_normalized_low_mean': '', 
-                'TFT_regularity_normalized_medium_mean': '', 
+                'TFT_regularity_normalized_medium_mean': 'Total fixation duration on medium regular words (mean)',
                 'TFT_regularity_normalized_high_mean': '', 
                 'TFT_regularity_normalized_low_std': '', 
                 'TFT_regularity_normalized_medium_std': '', 
@@ -410,32 +410,32 @@
                 'Fix_word_length_medium_mean': '', 
                 'Fix_word_length_high_mean': '', 
                 'Fix_word_length_low_std': '',
-                'Fix_word_length_medium_std': '', 
+                'Fix_word_length_medium_std': 'Number of fixations on medium length words (std)',
                 'Fix_word_length_high_std': '', 
                 'Fix_familiarity_normalized_low_mean': '', 
                 'Fix_familiarity_normalized_medium_mean': '',
-                'Fix_familiarity_normalized_high_mean': '', 
+                'Fix_familiarity_normalized_high_mean': 'Number of fixated highly familiar words (mean)',
                 'Fix_familiarity_normalized_low_std': '', 
                 'Fix_familiarity_normalized_medium_std': 'Number of fixated medium familiar words (std)', 
                 'Fix_familiarity_normalized_high_std': '',
-                'Fix_regularity_normalized_low_mean': '', 
+                'Fix_regularity_normalized_low_mean': 'Number of fixated irregular words (mean)',
                 'Fix_regularity_normalized_medium_mean': '', 
-                'Fix_regularity_normalized_high_mean': '', 
+                'Fix_regularity_normalized_high_mean': 'Number of fixated highly regular words (mean)',
                 'Fix_regularity_normalized_low_std': '', 
                 'Fix_regularity_normalized_medium_std': 'Number of fixated medium regular words (std)', 
                 'Fix_regularity_normalized_high_std': '', 
-                'Fix_lemma_frequency_normalized_low_mean': '',
+                'Fix_lemma_frequency_normalized_low_mean': 'Number of fixated words with low lemma frequency (mean)',
                 'Fix_lemma_frequency_normalized_medium_mean': '', 
                 'Fix_lemma_frequency_normalized_high_mean': '', 
                 'Fix_lemma_frequency_normalized_low_std': 'Number of fixated words with low lemma frequency (std)', 
                 'Fix_lemma_frequency_normalized_medium_std': '', 
-                'Fix_lemma_frequency_normalized_high_std': '',
+                'Fix_lemma_frequency_normalized_high_std': 'Number of fixated words with high lemma frequency (std)',
                 'FPReg_word_length_low_mean': '', 
                 'FPReg_word_length_medium_mean': '', 
                 'FPReg_word_length_high_mean': '',
                 'FPReg_word_length_low_std': '', 
                 'FPReg_word_length_medium_std': '', 
-                'FPReg_word_length_high_std': '', 
+                'FPReg_word_length_high_std': 'Number of first-pass regressions on long words (std)',
                 'FPReg_familiarity_normalized_low_mean': '',
                 'FPReg_familiarity_normalized_medium_mean': '', 
                 'FPReg_familiarity_normalized_high_mean': '',
@@ -449,15 +449,15 @@
                 'FPReg_regularity_normalized_medium_std': '', 
                 'FPReg_regularity_normalized_high_std': '', 
                 'FPReg_lemma_frequency_normalized_low_mean': '', 
-                'FPReg_lemma_frequency_normalized_medium_mean': 'Ratio of medium frequency lemmas triggering a FPReg',
+                'FPReg_lemma_frequency_normalized_medium_mean': 'Number of medium frequency lemmas triggering a first-pass regression (mean)',
                 'FPReg_lemma_frequency_normalized_high_mean': '', 
-                'FPReg_lemma_frequency_normalized_low_std': '', 
+                'FPReg_lemma_frequency_normalized_low_std': 'Number of low frequency lemmas triggering a first-pass regression (std)',
                 'FPReg_lemma_frequency_normalized_medium_std': '', 
-                'FPReg_lemma_frequency_normalized_high_std': '', 
-                'RR_word_length_low_mean': 'Ratio of short re-read words',
-                'RR_word_length_medium_mean': 'Ratio of medium length re-read words',
-                'RR_word_length_high_mean': 'Ratio of long re-read words',
-                'RR_word_length_low_std': '', 
+                'FPReg_lemma_frequency_normalized_high_std': 'Number of high frequency lemmas triggering a first-pass regression (std)',
+                'RR_word_length_low_mean': 'Number of short re-read words (mean)',
+                'RR_word_length_medium_mean': 'Number of medium length re-read words (mean)',
+                'RR_word_length_high_mean': 'Number of long re-read words (mean)',
+                'RR_word_length_low_std': 'Number of short re-read words (std)',
                 'RR_word_length_medium_std': '', 
                 'RR_word_length_high_std': '',
                 'RR_familiarity_normalized_low_mean': '', 
@@ -482,25 +482,25 @@
                 'SL_out_word_length_medium_mean': '', 
                 'SL_out_word_length_high_mean': '',
                 'SL_out_word_length_low_std': '', 
-                'SL_out_word_length_medium_std': '', 
+                'SL_out_word_length_medium_std': 'Outgoing saccade length of medium length words (std)',
                 'SL_out_word_length_high_std': '', 
                 'SL_out_familiarity_normalized_low_mean': '', 
-                'SL_out_familiarity_normalized_medium_mean': '', 
+                'SL_out_familiarity_normalized_medium_mean': 'Outgoing saccade length of medium familiar words (mean)',
                 'SL_out_familiarity_normalized_high_mean': '', 
-                'SL_out_familiarity_normalized_low_std': 'Outgoing saccade length of words that are little familiar (std)', 
+                'SL_out_familiarity_normalized_low_std': 'Outgoing saccade length of little familiar words (std)',
                 'SL_out_familiarity_normalized_medium_std': '', 
-                'SL_out_familiarity_normalized_high_std': 'Outgoing saccade length of words that are highly familiar (std)',
+                'SL_out_familiarity_normalized_high_std': 'Outgoing saccade length of highly familiar words (std)',
                 'SL_out_regularity_normalized_low_mean': '', 
-                'SL_out_regularity_normalized_medium_mean': '', 
-                'SL_out_regularity_normalized_high_mean': '', 
+                'SL_out_regularity_normalized_medium_mean': 'Outgoing saccade length of medium regular words (mean)',
+                'SL_out_regularity_normalized_high_mean': 'Outgoing saccade length of highly regular words (mean)',
                 'SL_out_regularity_normalized_low_std': '',
                 'SL_out_regularity_normalized_medium_std': '', 
-                'SL_out_regularity_normalized_high_std': 'Outgoing saccade length from highly regular words (std)', 
+                'SL_out_regularity_normalized_high_std': 'Outgoing saccade length of highly regular words (std)',
                 'SL_out_lemma_frequency_normalized_low_mean': '', 
                 'SL_out_lemma_frequency_normalized_medium_mean': '', 
                 'SL_out_lemma_frequency_normalized_high_mean': '', 
                 'SL_out_lemma_frequency_normalized_low_std': '', 
-                'SL_out_lemma_frequency_normalized_medium_std': 'Outgoing saccade length from words with medium lemma frequency (std)', 
+                'SL_out_lemma_frequency_normalized_medium_std': 'Outgoing saccade length of words with medium lemma frequency (std)',
                 'SL_out_lemma_frequency_normalized_high_std': '', 
                 'TRC_out_word_length_low_mean': '', 
                 'TRC_out_word_length_medium_mean': '', 
@@ -517,7 +517,7 @@
                 'TRC_out_regularity_normalized_low_mean': '', 
                 'TRC_out_regularity_normalized_medium_mean': '', 
                 'TRC_out_regularity_normalized_high_mean': '', 
-                'TRC_out_regularity_normalized_low_std': '', 
+                'TRC_out_regularity_normalized_low_std': 'Total outgoing regression count of irregular words (std)',
                 'TRC_out_regularity_normalized_medium_std': '', 
                 'TRC_out_regularity_normalized_high_std': '', 
                 'TRC_out_lemma_frequency_normalized_low_mean': '', 
